EDIT completata parte desktop planning

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
         <div class="col_plan">
 
           <div class="plan-right">
-            <li class="img_plan"><img src="./img/planning1.png" alt="Planning"></li>
-            <li class="title_plan"><h2>Strategic Planning</h2></li>
-            <li class="p_plan"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates illum aperiam expedita assumenda . </p></li>
+            <li class="img_plan_right"><img src="./img/planning2.png" alt="Planning"></li>
+            <li class="title_plan_right"><h2>App development</h2></li>
+            <li class="p_plan-right"><p> <i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates illum aperiam expedita assumenda .</i> </p></li>
+            <li class="button--purple"><i class="fa-solid fa-arrow-down"></i></li>
         </div>
             
 
