FEAT Aggiunta sezione testimonials

--- a/index.html
+++ b/index.html
@@ -161,10 +161,13 @@
         <conteiner class="conteiner_testimonials">
 
             <row class="row_testimonials">
-
+              
+                <div class="title_testimonials">
                 <p> TESTIMONIALS</p>
-                <h2 class="title_testimonials">We are committed expert partners</h2>
+                <h2 class="h2_testimonials">We are committed expert partners</h2>
                 <p>We lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quia consectetur deserunt sequi, ut enim nulla fuga repudiandae right.</p>
+                </div>
+
 
             <div class="conteiner_card">
 
@@ -175,7 +178,7 @@
 
                     <div class="text_card_testimonials">
 
-                    <p>We lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quia consectetur deserunt sequi, ut enim nulla fuga repudiandae right.ut enim nulla fuga repudiandae right</p>
+                    <p >We lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore quia consectetur deserunt sequi, ut enim nulla fuga repudiandae right.ut enim nulla fuga repudiandae right</p>
                     <h3>Nat Reynolds</h3>
 
                     </div>
