FEAT aggiunta sezione About ut

--- a/index.html
+++ b/index.html
@@ -326,6 +326,54 @@
   </div>
 </section>
 
+
+
+
+<!-- Inizio sezione About us -->
+
+<section>
+
+    <div class="conteiner_about-us">
+    <div class="row_about-us">
+        <figure class="text_about-us">
+            <h2> About Us</h2>
+            <p class="p_about-us">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quasi rerum molestias quisquam voluptas quod autem nihil distinctio veritatis aspernatur corrupti quia odit assumenda placeat sequi, dolorem, sint, numquam alias!
+            Ullam, maiores architecto in saepe dolore magni laudantium perferendis similique asperiores vero magnam consequatur nemo dolor eum quis, dignissimos excepturi minima, nam dolores ratione quas natus. Eaque magni sint animi.
+            Provident, expedita nihil! Ratione incidunt eveniet laborum? </p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quasi rerum molestias quisquam voluptas quod autem nihil distinctio veritatis aspernatur corrupti quia odit assumenda placeat sequi, dolorem, sint, numquam alias!
+                Ullam, maiores architecto in saepe dolore magni laudantium perferendis similique asperiores vero magnam consequatur nemo dolor eum quis, dignissimos excepturi minima, nam dolores ratione quas natus. Eaque magni sint animi.
+                Provident, expedita nihil! Ratione incidunt eveniet laborum?</p>
+
+        </figure>
+
+
+        <div class="card_about-us">
+            <ul>
+             <li class="img_testimonials img_about-us"></li>
+             <li><h3>I help companier in saepe dolore magni laudantium perferendis.</h3></li>
+             <li><div class="violet-button linkedin"><i class="fa-brands fa-linkedin"></i> Find me in Linkedin</div></li>
+
+            </ul>
+       </div>
+
+    </div>   
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+</section>
+
   </main>
 
   <footer>
