FEAT+EDIT creata sezione free trial

--- a/index.html
+++ b/index.html
@@ -358,14 +358,33 @@
        </div>
 
     </div>   
-
-
-
-
-
     </div>
 
+</section>
 
+
+<!-- INIZIO SEZIONE TRIAL -->
+
+<section>
+  <div class="conteiner-trial">
+    <ul class="trial">
+
+        <li><span>GET STARTED</span></li>
+        <li><h2 class="trial_h2">Simple,Trasparente Pricing</h2></li>
+        <li><h1>It's Free!</h1></li>
+        <li> <p>We're stil in beta and we lorem ipsum lorem lorem, <br> i'll lorem lorem lorem lorem out et incitur amor it nun obio liat buntur.</p></li>
+        <li class="button-trial">Get started</li>
+        <li> <p>Copywriting 2021 Boolean^Privacy Policy</p> </li>
+
+  </ul>
+
+
+
+
+
+
+
+  </div>
 
 
 
