FEAT abbozzato footer

--- a/index.html
+++ b/index.html
@@ -378,20 +378,31 @@
 
   </ul>
 
-
-
-
-
-
-
-  </div>
-
-
-
-
-
+ </div>
 
 </section>
+
+
+<!-- inizio footer -->
+<footer>
+   <div class="conteiner_footer">
+      
+    <ul class="list_footer">
+        <li> <p class="p_footer">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et quasi rerum molestias quisquam voluptas quod autem nihil.Ullam, maiores architecto in saepe dolore magni laudantium perferendis similique asperiores vero</p> </li>
+        <li>Ullam, maiores architecto in saepe dolore magni laudantium perferendis similique asperiores vero</li>
+
+
+
+    </ul>
+
+
+
+   </div>
+
+
+
+
+</footer>
 
   </main>
 
